<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
        <TextView
            android:id="@+id/timeBlockLabel"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/time_block"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@id/timeBlockLabel"
           android:orientation="horizontal">

           <Button
               android:layout_width="0dp"
               android:layout_margin="10dp"
               android:layout_height="wrap_content"
               android:text="@string/breakfast_button"
               android:layout_weight="1"/>

           <Button
               android:layout_width="0dp"
               android:layout_margin="10dp"
               android:layout_height="wrap_content"
               android:text="@string/lunch_button"
               android:layout_weight="1"/>

           <Button
               android:layout_width="0dp"
               android:layout_margin="10dp"
               android:layout_height="wrap_content"
               android:text="@string/dinner_button"
               android:layout_weight="1"/>

       </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/people_number_label"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/people_number"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/people_number_label"
            android:orientation="horizontal"
            android:gravity="center">
            
            <EditText
                android:id="@+id/people_number_input"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:layout_weight="4"
                android:layout_marginLeft="20dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_add_24"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_remove_24"/>
            
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:addStatesFromChildren="false">


        <TextView
            android:id="@+id/price"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />
        <LinearLayout
            android:layout_below="@id/price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isb_max="1000"
                app:isb_min="0"
                app:isb_progress="25"
                app:isb_seek_smoothly="true"
                app:isb_show_tick_marks_type="oval"
                app:isb_tick_marks_size="13dp"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_size="15sp"
                app:isb_thumb_size="20dp"
                app:isb_show_indicator="rounded_rectangle"
                app:isb_indicator_text_color="@color/colorAccent"
                app:isb_indicator_text_size="18sp"
                app:isb_track_background_size="2dp"
                app:isb_track_progress_size="4dp"/>
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/genre"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/genre"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/genre"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/fastFood"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle_layout"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="asd"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/Italian"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle_layout"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="asd"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/cafe"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle_layout"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="asd"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/Japanese"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle_layout"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="asd"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/others"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/circle_layout"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="asd"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        >
        
        <Button
            android:text="@string/search"
            android:layout_width="360dp"
            android:layout_height="60dp"
            />

    </LinearLayout>
</LinearLayout>